# Intersection3DSegments

./: .clang-format  .gitignore  CMakeLists.txt  InputOutput.h  README.md  main.cpp  result.txt  segments.txt
GeometryObjects/: CMakeLists.txt  segment3d.cpp  segment3d.h  vector3d.cpp  vector3d.h
